# BrightnessControl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: app.cpp  resource.rc  utils.cpp  utils.hpp
